Fix: Widgets screen block toolbar overlaps the Block Area accordion trigger

--- a/packages/edit-widgets/src/components/widget-area/style.scss
+++ b/packages/edit-widgets/src/components/widget-area/style.scss
@@ -2,3 +2,6 @@
 	max-width: $content-width;
 	margin: 0 auto 30px;
 }
+.edit-widgets-main-block-list {
+	padding-top: $block-controls-height + $grid-size-small;
+}
